--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!--<h1>This is our new website!</h1>-->
-<html>
+<h1>This is our new website!</h1>
+<!-- <html>
  <body>
   <iframe src="http://www.youtube.com/embed/W7qWa52k-nE"
    width="560" height="315" frameborder="0" allowfullscreen></iframe>
  </body>
 </html>
+ -->
