--- a/index.html
+++ b/index.html
@@ -1,7 +1,195 @@
-<!-- <h1>This is our new website!</h1> -->
+<!DOCTYPE HTML>
+<!--
+	Miniport by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
- <body>
-  <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/P1Sq7T9PvP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-  <iframe width="700" height="1000" src="https://bookend-data-dart.herokuapp.com/" frameborder="1px" style="text-align:center" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- </body>
+	<head>
+		<title>data-dart</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
+
+		<!-- Nav -->
+			<nav id="nav">
+				<ul class="container">
+					<li><a href="#top">Top</a></li>
+					<li><a href="#projects">Projects</a></li>
+					<li><a href="#team">The Team</a></li>
+					<li><a href="dart_blog.html">Blog</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
+
+		<!-- Home -->
+			<article id="top" class="wrapper style1">
+				<div class="container">
+					<div class="row">
+						<div class="col-4 col-5-large col-12-medium">
+							<span class="image fit"><img src="images/dartboard.jpg" alt="" /></span>
+						</div>
+						<div class="col-8 col-7-large col-12-medium">
+							<header>
+								<h1>Welcome to <strong>data-dart</strong>.</h1>
+							</header>
+							<p>We are a team of graduate students from Rutgers University who tackle interesting problems in data science and machine learning. We are also the recipients of the Erdos Institute's Data Science Bootcamp group competiton for May 2020.</p>
+							<a href="#projects" class="button large scrolly">Learn about what we've done</a>
+						</div>
+					</div>
+				</div>
+			</article>
+
+		<!-- Projects -->
+			<article id="projects" class="wrapper style3">
+				<div class="container">
+					<header>
+						<h2>data-dart Projects</h2>
+						<p>Here's some of the stuff we've been working on</p>
+					</header>
+					<div class="row">
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="dart_blog.html" class="image featured"><img src="images/book.png" alt="" /></a>
+								<h3><a href="#bookend">bookend</a></h3>
+								<p>Authorship Attribution</p>
+							</article>
+						</div>
+						
+						<!-- <div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+								<h3><a href="#">Sed amet ornare</a></h3>
+								<p>Ornare nulla proin odio consequat.</p>
+							</article>
+						</div> -->
+					</div>
+				</div>
+			</article>
+
+
+		<!-- The Team -->
+		<article id="team" class="wrapper style2">
+				<div class="container">
+					<header>
+						<h2>Meet the Team.</h2>
+					</header>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<a href="http://www.physics.rutgers.edu/~dettman/"><span class="image fit"><img src="images/mona.jpg" alt="" /></span></a>
+								<h3>Kyle Dettman</h3>
+								<p>Stars go boom!</p>
+								<ul class="social">
+									<li><a href="https://github.com/kdettman" class="icon team fa-github" target="_blank"><span class="label">Github</span></a></li>
+									<li><a href="https://www.linkedin.com/in/kyle-dettman-19bb0899/" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+									<li><a href="mailto:kgdettman@gmail.com?cc=dettman@physics.rutgers.edu" class="icon brands fa-envelope-open" target="_blank"><span class="label">Email</span></a></li>
+								</ul>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<a href="http://www.physics.rutgers.edu/~dettman/"><span class="image fit"><img src="images/mona.jpg" alt="" /></span></a>
+								<h3>Elaad Applebaum</h3>
+								<p>Fake things are cool!</p>
+								<ul class="social">
+									<li><a href="https://github.com/" class="icon team fa-github" target="_blank"><span class="label">Github</span></a></li>
+									<li><a href="https://www.linkedin.com/" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+									<li><a href="mailto:kgdettman@gmail.com?cc=dettman@physics.rutgers.edu" class="icon brands fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+								</ul>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<a href="http://www.physics.rutgers.edu/~dettman/"><span class="image fit"><img src="images/mona.jpg" alt="" /></span></a>
+								<h3>Diptanil Roy</h3>
+								<p>I'd rather be anywhere but Long Island!</p>
+								<ul class="social">
+									<li><a href="https://github.com/" class="icon team fa-github" target="_blank"><span class="label">Github</span></a></li>
+									<li><a href="https://www.linkedin.com/" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+									<li><a href="mailto:kgdettman@gmail.com?cc=dettman@physics.rutgers.edu" class="icon brands fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+								</ul>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<a href="http://www.physics.rutgers.edu/~dettman/"><span class="image fit"><img src="images/mona.jpg" alt="" /></span></a>
+								<h3>Nikhil Tilak</h3>
+								<p>Twist and shout!</p>
+								<ul class="social">
+									<li><a href="https://github.com/" class="icon team fa-github" target="_blank"><span class="label">Github</span></a></li>
+									<li><a href="https://www.linkedin.com/" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+									<li><a href="mailto:kgdettman@gmail.com?cc=dettman@physics.rutgers.edu" class="icon brands fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+								</ul>
+							</section>
+						</div>
+					</div>
+				</div>
+			</article>
+
+
+		<!-- Contact -->
+			<article id="contact" class="wrapper style4">
+				<div class="container medium">
+					<header>
+						<h2>Have a question or want to reach out?</h2>
+						<!-- <p>Send us an email</p> -->
+					</header>
+					<div class="row">
+						<div class="col-12">
+							<ul class="actions">
+								<li><a href="mailto:data-dart@gmail.com"><input type='submit' value="Send us an email"></a></li>
+							</ul>
+							<!-- <form method="post" action="index.html">
+								<div class="row">
+									<div class="col-6 col-12-small">
+										<input type="text" name="name" id="name" placeholder="Name" />
+									</div>
+									<div class="col-6 col-12-small">
+										<input type="text" name="email" id="email" placeholder="Email" />
+									</div>
+									<div class="col-12">
+										<input type="text" name="subject" id="subject" placeholder="Subject" />
+									</div>
+									<div class="col-12">
+										<textarea name="message" id="message" placeholder="Message"></textarea>
+									</div>
+									<div class="col-12">
+										<ul class="actions">
+											<li><input type="submit" value="Send Message" /></li>
+											<li><input type="reset" value="Clear Form" class="alt" /></li>
+										</ul>
+									</div>
+								</div>
+							</form> -->
+						</div>
+						<div class="col-12">
+							<hr />
+							<h3>Find us on ...</h3>
+							<ul class="social">
+								<li><a href="https://github.com/data-dart" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+								<li><a href="https://www.youtube.com/channel/UCxrDwiR_L0ck3de_Y9s0NNw" class="icon brands fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
+							</ul>
+							<hr />
+						</div>
+					</div>
+					<footer>
+						<ul id="copyright">
+							<li>&copy; data-dart. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</footer>
+				</div>
+			</article>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
