Update home page text

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 							<header>
 								<h1>Welcome to <strong>data-dart</strong>.</h1>
 							</header>
-							<p>We are a team of graduate students from Rutgers University who tackle interesting problems in data science and machine learning. We are also the recipients of the Erdos Institute's Data Science Bootcamp group competiton for May 2020.</p>
-							<a href="#projects" class="button large scrolly">Learn about what we've done</a>
+							<p>We are a team of graduate students from the Rutgers University Department of Physics and Astronomy. We tackle interesting problems in <strong>data science</strong> and <strong>machine learning</strong>. We formed our group as part of <a href="https://www.erdosinstitute.org/code" target="_blank">the Erdos Institute's May 2020 Data Science Bootcamp</a>, in which we won first place in the project competition.</p>
+							<a href="#projects" class="button large scrolly">Learn more</a>
 						</div>
 					</div>
 				</div>
@@ -46,15 +46,15 @@
 			<article id="projects" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>data-dart Projects</h2>
-						<p>Here's some of the stuff we've been working on</p>
+						<h2>data-dart projects</h2>
+						<p>Click the links to learn more about each project.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="dart_blog.html" class="image featured"><img src="images/book.png" alt="" /></a>
 								<h3><a href="#bookend">bookend</a></h3>
-								<p>Authorship Attribution</p>
+								<p>Authorship attribution</p>
 							</article>
 						</div>
 						
@@ -85,19 +85,19 @@
 								<ul class="social">
 									<li><a href="https://github.com/kdettman" class="icon team fa-github" target="_blank"><span class="label">Github</span></a></li>
 									<li><a href="https://www.linkedin.com/in/kyle-dettman-19bb0899/" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
-									<li><a href="mailto:kgdettman@gmail.com?cc=dettman@physics.rutgers.edu" class="icon brands fa-envelope-open" target="_blank"><span class="label">Email</span></a></li>
+									<li><a href="mailto:kgdettman@gmail.com?cc=dettman@physics.rutgers.edu" class="icon fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<a href="http://www.physics.rutgers.edu/~dettman/"><span class="image fit"><img src="images/mona.jpg" alt="" /></span></a>
+								<a href="http://elaadapplebaum.com"><span class="image fit"><img src="images/mona.jpg" alt="" /></span></a>
 								<h3>Elaad Applebaum</h3>
 								<p>Fake things are cool!</p>
 								<ul class="social">
-									<li><a href="https://github.com/" class="icon team fa-github" target="_blank"><span class="label">Github</span></a></li>
-									<li><a href="https://www.linkedin.com/" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
-									<li><a href="mailto:kgdettman@gmail.com?cc=dettman@physics.rutgers.edu" class="icon brands fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+									<li><a href="https://github.com/emapple" class="icon team fa-github" target="_blank"><span class="label">Github</span></a></li>
+									<li><a href="https://www.linkedin.com/in/elaadapplebaum" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+									<li><a href="mailto:elaad.applebaum@gmail.com" class="icon fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 						</div>
@@ -109,7 +109,7 @@
 								<ul class="social">
 									<li><a href="https://github.com/" class="icon team fa-github" target="_blank"><span class="label">Github</span></a></li>
 									<li><a href="https://www.linkedin.com/" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
-									<li><a href="mailto:kgdettman@gmail.com?cc=dettman@physics.rutgers.edu" class="icon brands fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+									<li><a href="mailto:kgdettman@gmail.com?cc=dettman@physics.rutgers.edu" class="icon fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 						</div>
@@ -121,7 +121,7 @@
 								<ul class="social">
 									<li><a href="https://github.com/" class="icon team fa-github" target="_blank"><span class="label">Github</span></a></li>
 									<li><a href="https://www.linkedin.com/" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
-									<li><a href="mailto:kgdettman@gmail.com?cc=dettman@physics.rutgers.edu" class="icon brands fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+									<li><a href="mailto:kgdettman@gmail.com?cc=dettman@physics.rutgers.edu" class="icon fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 						</div>
